tests/ok/match-owned-enum-payload.ari
enum MaybeOwned {
  None,
  Some(own i64),
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  var total = 0;

  match Some(make_owned(7)) {
    Some(token) => {
      drop token;
      total = 41;
    },
    None => {
      total = 1;
    },
  }

  return total;
}
