tests/errors/overwrite-own.ari
fn main() -> i64 {
  var token: own i64 = 1;
  token = 2;
  drop token;
  return 0;
}
